fix: Make z-index match the 995 of contextual-help, to prevent appearing above the app-header.

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,6 +3,6 @@
 /// @link http://origami.pearsoned.com/registry/components/o-drawer
 ////
 
-$o-drawer-z-index: 2499 !default;
+$o-drawer-z-index: 995 !default;
 $o-drawer-width: 332px !default;
 $o-drawer-bg: #ffffff !default;
